[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/enemy_tank.png" type="Texture" id=1]
[ext_resource path="res://Tank.gd" type="Script" id=2]
[ext_resource path="res://DustTrail.tscn" type="PackedScene" id=3]
[ext_resource path="res://sfx/tank_track.wav" type="AudioStream" id=4]
[ext_resource path="res://sfx/car-crash.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 45, 27 )

[node name="Tank" type="RigidBody2D" groups=[
"Tank",
]]
collision_layer = 16
collision_mask = 74
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3, 4 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 3, 4 )
shape = SubResource( 1 )

[node name="DustTrail" parent="." instance=ExtResource( 3 )]
position = Vector2( 2, 29 )
scale = Vector2( 0.5, 0.5 )

[node name="ExplosionPosition" type="Position2D" parent="."]
position = Vector2( 2, 12 )

[node name="Timer" type="Timer" parent="."]

[node name="TrackLoop" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="Crash" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
